src/main/java/com/ailk/sets/grade/word/grammar/PaperParser.java
// Generated from Paper.g4 by ANTLR 4.2.2
package com.ailk.sets.grade.word.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PaperParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UNIT_HOUR=1, UNIT_MINUTE=2, UNIT_SECOND=3, PROMPT_PAPER_NAME=4, PROMPT_PAPER_DESC=5, 
		PROMPT_TIME_LIMIT=6, UNIT_POINT=7, PROMPT_POINT=8, PROMPT_SKILL_REORDER=9, 
		PROMPT_QUESTION_REORDER=10, PROMPT_CHOICE_REORDER=11, PROMPT_BACKWARD=12, 
		PROMPT_YES=13, PROMPT_NO=14, HINT_SCQ=15, HINT_MCQS=16, HINT_VERY_EASY=17, 
		HINT_EASY=18, HINT_MODERATE=19, HINT_DIFFICULT=20, HINT_VERY_DIFFICULT=21, 
		HINT_SAMPLE=22, PROMPT_ANSWER=23, PROMPT_SUPPLEMENT=24, CHOICE_PREFIX=25, 
		DIGIT_PREFIX=26, COMMA=27, COLON=28, LBRACE=29, RBRACE=30, HINT_LANGUAGE=31, 
		INT=32, NL=33, WS=34, WORD=35;
	public static final String[] tokenNames = {
		"<INVALID>", "'小时'", "'分钟'", "'秒'", "PROMPT_PAPER_NAME", "PROMPT_PAPER_DESC", 
		"PROMPT_TIME_LIMIT", "'分'", "PROMPT_POINT", "PROMPT_SKILL_REORDER", "PROMPT_QUESTION_REORDER", 
		"PROMPT_CHOICE_REORDER", "PROMPT_BACKWARD", "PROMPT_YES", "PROMPT_NO", 
		"HINT_SCQ", "HINT_MCQS", "'极易'", "'易'", "'中'", "'难'", "'极难'", "'样例'", 
		"PROMPT_ANSWER", "PROMPT_SUPPLEMENT", "CHOICE_PREFIX", "DIGIT_PREFIX", 
		"COMMA", "COLON", "LBRACE", "RBRACE", "HINT_LANGUAGE", "INT", "'\n'", 
		"WS", "WORD"
	};
	public static final int
		RULE_description = 0, RULE_paperName = 1, RULE_paperDesc = 2, RULE_descTime = 3, 
		RULE_unitTime = 4, RULE_descPoint = 5, RULE_skillReorder = 6, RULE_questionReorder = 7, 
		RULE_choiceReorder = 8, RULE_backward = 9, RULE_yesOrNo = 10, RULE_questionWithoutChoices = 11, 
		RULE_question = 12, RULE_title = 13, RULE_choices = 14, RULE_choice = 15, 
		RULE_answer = 16, RULE_supplement = 17, RULE_sentence = 18, RULE_skill = 19, 
		RULE_words = 20, RULE_word = 21, RULE_punctuation = 22, RULE_unit = 23, 
		RULE_hint = 24, RULE_prompt = 25;
	public static final String[] ruleNames = {
		"description", "paperName", "paperDesc", "descTime", "unitTime", "descPoint", 
		"skillReorder", "questionReorder", "choiceReorder", "backward", "yesOrNo", 
		"questionWithoutChoices", "question", "title", "choices", "choice", "answer", 
		"supplement", "sentence", "skill", "words", "word", "punctuation", "unit", 
		"hint", "prompt"
	};

	@Override
	public String getGrammarFileName() { return "Paper.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PaperParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DescriptionContext extends ParserRuleContext {
		public List<PaperNameContext> paperName() {
			return getRuleContexts(PaperNameContext.class);
		}
		public List<DescTimeContext> descTime() {
			return getRuleContexts(DescTimeContext.class);
		}
		public List<TerminalNode> NL() { return getTokens(PaperParser.NL); }
		public PaperDescContext paperDesc(int i) {
			return getRuleContext(PaperDescContext.class,i);
		}
		public List<QuestionReorderContext> questionReorder() {
			return getRuleContexts(QuestionReorderContext.class);
		}
		public PaperNameContext paperName(int i) {
			return getRuleContext(PaperNameContext.class,i);
		}
		public List<PaperDescContext> paperDesc() {
			return getRuleContexts(PaperDescContext.class);
		}
		public WordsContext words(int i) {
			return getRuleContext(WordsContext.class,i);
		}
		public DescTimeContext descTime(int i) {
			return getRuleContext(DescTimeContext.class,i);
		}
		public BackwardContext backward(int i) {
			return getRuleContext(BackwardContext.class,i);
		}
		public List<ChoiceReorderContext> choiceReorder() {
			return getRuleContexts(ChoiceReorderContext.class);
		}
		public List<DescPointContext> descPoint() {
			return getRuleContexts(DescPointContext.class);
		}
		public QuestionReorderContext questionReorder(int i) {
			return getRuleContext(QuestionReorderContext.class,i);
		}
		public SkillReorderContext skillReorder(int i) {
			return getRuleContext(SkillReorderContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(PaperParser.NL, i);
		}
		public List<WordsContext> words() {
			return getRuleContexts(WordsContext.class);
		}
		public ChoiceReorderContext choiceReorder(int i) {
			return getRuleContext(ChoiceReorderContext.class,i);
		}
		public List<BackwardContext> backward() {
			return getRuleContexts(BackwardContext.class);
		}
		public List<SkillReorderContext> skillReorder() {
			return getRuleContexts(SkillReorderContext.class);
		}
		public DescPointContext descPoint(int i) {
			return getRuleContext(DescPointContext.class,i);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitDescription(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(53);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(52); words();
					}
					break;
				}
				setState(69);
				switch (_input.LA(1)) {
				case PROMPT_PAPER_NAME:
					{
					setState(55); paperName();
					}
					break;
				case PROMPT_PAPER_DESC:
					{
					setState(56); paperDesc();
					}
					break;
				case UNIT_HOUR:
				case UNIT_MINUTE:
				case UNIT_SECOND:
				case PROMPT_TIME_LIMIT:
				case UNIT_POINT:
				case PROMPT_POINT:
				case PROMPT_SKILL_REORDER:
				case PROMPT_QUESTION_REORDER:
				case PROMPT_CHOICE_REORDER:
				case PROMPT_BACKWARD:
				case PROMPT_YES:
				case PROMPT_NO:
				case HINT_SCQ:
				case HINT_MCQS:
				case HINT_VERY_EASY:
				case HINT_EASY:
				case HINT_MODERATE:
				case HINT_DIFFICULT:
				case HINT_VERY_DIFFICULT:
				case HINT_SAMPLE:
				case CHOICE_PREFIX:
				case DIGIT_PREFIX:
				case COMMA:
				case COLON:
				case LBRACE:
				case RBRACE:
				case HINT_LANGUAGE:
				case INT:
				case NL:
				case WORD:
					{
					setState(64);
					switch (_input.LA(1)) {
					case PROMPT_TIME_LIMIT:
						{
						setState(57); descTime();
						}
						break;
					case PROMPT_POINT:
						{
						setState(58); descPoint();
						}
						break;
					case PROMPT_SKILL_REORDER:
						{
						setState(59); skillReorder();
						}
						break;
					case PROMPT_QUESTION_REORDER:
						{
						setState(60); questionReorder();
						}
						break;
					case PROMPT_CHOICE_REORDER:
						{
						setState(61); choiceReorder();
						}
						break;
					case PROMPT_BACKWARD:
						{
						setState(62); backward();
						}
						break;
					case UNIT_HOUR:
					case UNIT_MINUTE:
					case UNIT_SECOND:
					case UNIT_POINT:
					case PROMPT_YES:
					case PROMPT_NO:
					case HINT_SCQ:
					case HINT_MCQS:
					case HINT_VERY_EASY:
					case HINT_EASY:
					case HINT_MODERATE:
					case HINT_DIFFICULT:
					case HINT_VERY_DIFFICULT:
					case HINT_SAMPLE:
					case CHOICE_PREFIX:
					case DIGIT_PREFIX:
					case COMMA:
					case COLON:
					case LBRACE:
					case RBRACE:
					case HINT_LANGUAGE:
					case INT:
					case NL:
					case WORD:
						{
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(67);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNIT_HOUR) | (1L << UNIT_MINUTE) | (1L << UNIT_SECOND) | (1L << UNIT_POINT) | (1L << PROMPT_YES) | (1L << PROMPT_NO) | (1L << HINT_SCQ) | (1L << HINT_MCQS) | (1L << HINT_VERY_EASY) | (1L << HINT_EASY) | (1L << HINT_MODERATE) | (1L << HINT_DIFFICULT) | (1L << HINT_VERY_DIFFICULT) | (1L << HINT_SAMPLE) | (1L << CHOICE_PREFIX) | (1L << DIGIT_PREFIX) | (1L << COMMA) | (1L << COLON) | (1L << LBRACE) | (1L << RBRACE) | (1L << HINT_LANGUAGE) | (1L << INT) | (1L << WORD))) != 0)) {
						{
						setState(66); words();
						}
					}

					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71); match(NL);
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNIT_HOUR) | (1L << UNIT_MINUTE) | (1L << UNIT_SECOND) | (1L << PROMPT_PAPER_NAME) | (1L << PROMPT_PAPER_DESC) | (1L << PROMPT_TIME_LIMIT) | (1L << UNIT_POINT) | (1L << PROMPT_POINT) | (1L << PROMPT_SKILL_REORDER) | (1L << PROMPT_QUESTION_REORDER) | (1L << PROMPT_CHOICE_REORDER) | (1L << PROMPT_BACKWARD) | (1L << PROMPT_YES) | (1L << PROMPT_NO) | (1L << HINT_SCQ) | (1L << HINT_MCQS) | (1L << HINT_VERY_EASY) | (1L << HINT_EASY) | (1L << HINT_MODERATE) | (1L << HINT_DIFFICULT) | (1L << HINT_VERY_DIFFICULT) | (1L << HINT_SAMPLE) | (1L << CHOICE_PREFIX) | (1L << DIGIT_PREFIX) | (1L << COMMA) | (1L << COLON) | (1L << LBRACE) | (1L << RBRACE) | (1L << HINT_LANGUAGE) | (1L << INT) | (1L << NL) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PaperNameContext extends ParserRuleContext {
		public TerminalNode PROMPT_PAPER_NAME() { return getToken(PaperParser.PROMPT_PAPER_NAME, 0); }
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public PaperNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paperName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterPaperName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitPaperName(this);
		}
	}

	public final PaperNameContext paperName() throws RecognitionException {
		PaperNameContext _localctx = new PaperNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_paperName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(PROMPT_PAPER_NAME);
			setState(77); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PaperDescContext extends ParserRuleContext {
		public WordsContext words() {
			return getRuleContext(WordsContext.class,0);
		}
		public TerminalNode PROMPT_PAPER_DESC() { return getToken(PaperParser.PROMPT_PAPER_DESC, 0); }
		public PaperDescContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paperDesc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterPaperDesc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitPaperDesc(this);
		}
	}

	public final PaperDescContext paperDesc() throws RecognitionException {
		PaperDescContext _localctx = new PaperDescContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paperDesc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(PROMPT_PAPER_DESC);
			setState(80); words();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescTimeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PaperParser.INT, 0); }
		public UnitTimeContext unitTime() {
			return getRuleContext(UnitTimeContext.class,0);
		}
		public TerminalNode PROMPT_TIME_LIMIT() { return getToken(PaperParser.PROMPT_TIME_LIMIT, 0); }
		public DescTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterDescTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitDescTime(this);
		}
	}

	public final DescTimeContext descTime() throws RecognitionException {
		DescTimeContext _localctx = new DescTimeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_descTime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(PROMPT_TIME_LIMIT);
			setState(83); match(INT);
			setState(84); unitTime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitTimeContext extends ParserRuleContext {
		public TerminalNode UNIT_HOUR() { return getToken(PaperParser.UNIT_HOUR, 0); }
		public TerminalNode UNIT_MINUTE() { return getToken(PaperParser.UNIT_MINUTE, 0); }
		public TerminalNode UNIT_SECOND() { return getToken(PaperParser.UNIT_SECOND, 0); }
		public UnitTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterUnitTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitUnitTime(this);
		}
	}

	public final UnitTimeContext unitTime() throws RecognitionException {
		UnitTimeContext _localctx = new UnitTimeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unitTime);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNIT_HOUR) | (1L << UNIT_MINUTE) | (1L << UNIT_SECOND))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescPointContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PaperParser.INT, 0); }
		public TerminalNode PROMPT_POINT() { return getToken(PaperParser.PROMPT_POINT, 0); }
		public TerminalNode UNIT_POINT() { return getToken(PaperParser.UNIT_POINT, 0); }
		public DescPointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descPoint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterDescPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitDescPoint(this);
		}
	}

	public final DescPointContext descPoint() throws RecognitionException {
		DescPointContext _localctx = new DescPointContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_descPoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(PROMPT_POINT);
			setState(89); match(INT);
			setState(90); match(UNIT_POINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkillReorderContext extends ParserRuleContext {
		public YesOrNoContext yesOrNo() {
			return getRuleContext(YesOrNoContext.class,0);
		}
		public TerminalNode PROMPT_SKILL_REORDER() { return getToken(PaperParser.PROMPT_SKILL_REORDER, 0); }
		public SkillReorderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skillReorder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterSkillReorder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitSkillReorder(this);
		}
	}

	public final SkillReorderContext skillReorder() throws RecognitionException {
		SkillReorderContext _localctx = new SkillReorderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_skillReorder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(PROMPT_SKILL_REORDER);
			setState(93); yesOrNo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionReorderContext extends ParserRuleContext {
		public TerminalNode PROMPT_QUESTION_REORDER() { return getToken(PaperParser.PROMPT_QUESTION_REORDER, 0); }
		public YesOrNoContext yesOrNo() {
			return getRuleContext(YesOrNoContext.class,0);
		}
		public QuestionReorderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionReorder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterQuestionReorder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitQuestionReorder(this);
		}
	}

	public final QuestionReorderContext questionReorder() throws RecognitionException {
		QuestionReorderContext _localctx = new QuestionReorderContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_questionReorder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(PROMPT_QUESTION_REORDER);
			setState(96); yesOrNo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChoiceReorderContext extends ParserRuleContext {
		public YesOrNoContext yesOrNo() {
			return getRuleContext(YesOrNoContext.class,0);
		}
		public TerminalNode PROMPT_CHOICE_REORDER() { return getToken(PaperParser.PROMPT_CHOICE_REORDER, 0); }
		public ChoiceReorderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choiceReorder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterChoiceReorder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitChoiceReorder(this);
		}
	}

	public final ChoiceReorderContext choiceReorder() throws RecognitionException {
		ChoiceReorderContext _localctx = new ChoiceReorderContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_choiceReorder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(PROMPT_CHOICE_REORDER);
			setState(99); yesOrNo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BackwardContext extends ParserRuleContext {
		public YesOrNoContext yesOrNo() {
			return getRuleContext(YesOrNoContext.class,0);
		}
		public TerminalNode PROMPT_BACKWARD() { return getToken(PaperParser.PROMPT_BACKWARD, 0); }
		public BackwardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_backward; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterBackward(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitBackward(this);
		}
	}

	public final BackwardContext backward() throws RecognitionException {
		BackwardContext _localctx = new BackwardContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_backward);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(PROMPT_BACKWARD);
			setState(102); yesOrNo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YesOrNoContext extends ParserRuleContext {
		public TerminalNode PROMPT_YES() { return getToken(PaperParser.PROMPT_YES, 0); }
		public TerminalNode PROMPT_NO() { return getToken(PaperParser.PROMPT_NO, 0); }
		public YesOrNoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yesOrNo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterYesOrNo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitYesOrNo(this);
		}
	}

	public final YesOrNoContext yesOrNo() throws RecognitionException {
		YesOrNoContext _localctx = new YesOrNoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_yesOrNo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==PROMPT_YES || _la==PROMPT_NO) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionWithoutChoicesContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(PaperParser.NL); }
		public SupplementContext supplement(int i) {
			return getRuleContext(SupplementContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(PaperParser.NL, i);
		}
		public AnswerContext answer(int i) {
			return getRuleContext(AnswerContext.class,i);
		}
		public List<AnswerContext> answer() {
			return getRuleContexts(AnswerContext.class);
		}
		public TerminalNode DIGIT_PREFIX() { return getToken(PaperParser.DIGIT_PREFIX, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public List<SupplementContext> supplement() {
			return getRuleContexts(SupplementContext.class);
		}
		public QuestionWithoutChoicesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionWithoutChoices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).enterQuestionWithoutChoices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaperListener ) ((PaperListener)listener).exitQuestionWithoutChoices(this);
		}
	}

	public final QuestionWithoutChoicesContext questionWithoutChoices() throws RecognitionException {
		QuestionWithoutChoicesContext _localctx = new QuestionWithoutChoicesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_questionWithoutChoices);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(106); match(DIGIT_PREFIX);
				}
				break;
			}
			setState(109); title();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(110); match(NL);
				setState(113);
				switch (_input.LA(1)) {
				case PROMPT_ANSWER:
					{
					setState(111); answer();
					}
					break;
				case PROMPT_SUPPLEMENT:
					{
					setState(112); supplement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
